syntax = "proto3";

package resources.settings;

import "buf/validate/validate.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/settings;settings";

message SystemStatus {
  Database database = 1;
  Nats nats = 2;
  DBSyncStatus dbsync = 3;
  VersionStatus version = 4;
}

message Nats {
  string version = 1 [(buf.validate.field).string.max_len = 32];
  bool connected = 2;
}

message Database {
  string version = 1 [(buf.validate.field).string.max_len = 32];
  bool connected = 2;
  uint64 migration_version = 3;
  bool migration_dirty = 4;
  string db_charset = 5 [(buf.validate.field).string.max_len = 32];
  string db_collation = 6 [(buf.validate.field).string.max_len = 32];
  bool tables_ok = 7;
}

message DBSyncStatus {
  bool enabled = 1;
  optional resources.timestamp.Timestamp last_synced_data = 2;
  optional resources.timestamp.Timestamp last_synced_activity = 3;
  optional string last_dbsync_version = 4 [(buf.validate.field).string.max_len = 32];
}

message VersionStatus {
  string current = 1 [(buf.validate.field).string.max_len = 32];
  optional NewVersionInfo new_version = 2;
}

message NewVersionInfo {
  string version = 1 [(buf.validate.field).string.max_len = 32];
  string url = 2 [(buf.validate.field).string.max_len = 256];
  optional resources.timestamp.Timestamp release_date = 3;
}
