syntax = "proto3";

package resources.sync;

import "resources/jobs/colleagues.proto";
import "resources/users/props.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/sync;sync";

// Connect an identifier/license to the provider with the specified external id
// (e.g., auto discord social connect on server join)
message UserOAuth2Conn {
  string provider_name = 1;
  string identifier = 2;
  string external_id = 3;
  string username = 4;
}

message UserProps {
  optional string reason = 1 [(validate.rules).string.max_len = 255];
  resources.users.UserProps props = 2 [(validate.rules).message.required = true];
}

message JobsUserProps {
  optional string reason = 1 [(validate.rules).string.max_len = 255];
  resources.jobs.JobsUserProps props = 2 [(validate.rules).message.required = true];
}

message UserUpdate {
  int32 user_id = 1;
  optional string group = 2;

  // Char details
  optional string job = 3;
  optional int32 job_grade = 4;
  optional string firstname = 5;
  optional string lastname = 6;
}

message TimeclockUpdate {
  string job = 1;
  int32 user_id = 2;
  bool start = 3;
}
